# WindowsWhisper

./: .gitignore  AGENTS.md  README.md  deploy-worker.ps1
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  package.json  scratch.md  settings.html  vite.config.ts
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  commands.rs  history.rs  lib.rs  main.rs  postprocessing.rs  settings.rs
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
