[package]
name = "windows-whisper"
version = "1.0.0"
description = "Push-to-talk speech-to-text for Windows"
authors = ["You"]
edition = "2021"

[lib]
name = "windows_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
image = "0.24"
enigo = "0.2"
device_query = "0.2"
dirs = "5.0"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
